--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "babel-eslint": "^8.0.1"
+    "babel-eslint": "^8.0.1",
+    "cross-env": "^5.1.6",
+    "husky": "^0.14.3",
+    "nightmare": "^3.0.1",
+    "nightmare-upload": "^0.1.1"
   }
 }
